--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-data
+data/db.json
+data/Excepciones.csv
+data/Provincias.csv
 .ipynb_checkpoints
 src/Queries.ipynb
 src/__pycache__/
-src/login.py
